src/objects/EDP_URLs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used for storing url&apos;s for edp callouts</description>
    <fields>
        <fullName>Full_Load_Filter__c</fullName>
        <description>This field is used for giving filter criteria for full load</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter filter criteria for full load like SourceTable=&quot;ALPIM&quot;. Use only characters =,!=,&lt;,&gt;. If you have multiple criteria, separate it by &apos;,&apos;</inlineHelpText>
        <label>Full Load Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for checking whether it is a full load or delta load</description>
        <label>Full Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Timestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maximum Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use NSNCode for Configuration Items,ItemId for Portfolio Items, NSNCode for ProductSalesItems, ParentID for Product Relations</inlineHelpText>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for EDP product relations url&apos;s</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>PMDI_URLs</label>
    <listViews>
        <fullName>EDP_URL</fullName>
        <columns>NAME</columns>
        <columns>URL__c</columns>
        <columns>isActive__c</columns>
        <columns>Maximum_Timestamp__c</columns>
        <columns>Full_Load__c</columns>
        <columns>Full_Load_Filter__c</columns>
        <columns>Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>EDP URL</label>
        <language>en_US</language>
    </listViews>
</CustomObject>